crates/language-v2/tests/src/fail/definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/definitions/duplicate_expression_name/test.rs:33:36
   |
33 | ...                   name = Expression1,
   |                              ^^^^^^^^^^^
